MNGECLIPSE-1708 run integration-tests without rest of the build